# EmbedSeg

./: .gitignore  .pre-commit-config.yaml  EmbedSeg_environment.yml  LICENSE  README.md  env.yml  environment.yml  index.html  pyproject.toml  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: ---bug-report.md
.github/workflows/: test_and_deploy.yml
EmbedSeg/: test.py  train.py
EmbedSeg/_tests/: test_center_crops.py
EmbedSeg/criterions/: __init__.py  lovasz_losses.py  my_loss.py  my_loss_3d.py
EmbedSeg/datasets/: ThreeDimensionalDataset.py  TwoDimensionalDataset.py  __init__.py
EmbedSeg/models/: BranchedERFNet.py  BranchedERFNet_3d.py  __init__.py  erfnet.py  erfnet_3d.py
EmbedSeg/utils/: create_dicts.py  generate_crops.py  glasbey.py  metrics.py  preprocess_data.py  test_time_augmentation.py  transforms.py  utils.py  utils2.py  view_palette.py  visualize.py
cmaps/: cmap_60.npy
css/: menu.css  style.css  zerogrid.css
docs/examples/2d/bbbc010/: 01-data.py  02-train.py  03-predict.py
examples/2d/basel-2020/: 01-data.ipynb  02-train.ipynb  03-predict.ipynb
examples/2d/basel-2020/experiment/basel-2020-Jan-03-2021/: loss.csv
examples/2d/bbbc010-2012/: 01-data.ipynb  02-train.ipynb  03-predict.ipynb
examples/2d/dsb-2018/: 01-data.ipynb  02-train.ipynb  03-predict.ipynb
examples/2d/monuseg-2018/: 01-data.ipynb  02-train.ipynb  03-predict.ipynb
examples/2d/usiigaci-2017/: 01-data.ipynb  02-train.ipynb  03-predict.ipynb
examples/3d/Arabidopsis-Cells-CAM/: 01-data.ipynb  02-train.ipynb  03-predict.ipynb
examples/3d/C.elegans-Cells-HK/: 01-data.ipynb  02-train.ipynb  03-predict.ipynb
examples/3d/Mouse-Organoid-Cells-CBG/: 01-data.ipynb  02-train.ipynb  03-predict.ipynb
examples/3d/Mouse-Skull-Nuclei-CBG/: 01-data.ipynb  02-train.ipynb  03-predict.ipynb
examples/3d/Platynereis-ISH-Nuclei-CBG/: 01-data.ipynb  02-train.ipynb  03-predict.ipynb
examples/3d/Platynereis-Nuclei-CBG/: 01-data.ipynb  02-train.ipynb  03-predict.ipynb
examples/3d_sliced/Platynereis-ISH-Nuclei-CBG/: 01-data.ipynb  02-train.ipynb  03-predict.ipynb
examples/DL4MIA/: train-and-predict-2d-finetuning.ipynb  train-and-predict-2d.ipynb  train-and-predict-2d_finetuning.ipynb  train-and-predict-3d-sliced.ipynb  train-and-predict-3d.ipynb  train-and-predict-3d_ilp.ipynb
examples/bbbc010-2012/: 01-data.ipynb  02-train.ipynb  03-predict.ipynb
examples/dsb-2018/: 01-data.ipynb  02-train.ipynb  03-predict.ipynb
examples/usiigaci-2017/: 01-data.ipynb  02-train.ipynb  03-predict.ipynb
pretrained_models/Mouse-Organoid-Cells-CBG/: data_properties.json
pretrained_models/Mouse-Skull-Nuclei-CBG/: data_properties.json
pretrained_models/Platynereis-ISH-Nuclei-CBG/: data_properties.json
pretrained_models/Platynereis-Nuclei-CBG/: data_properties.json
pretrained_models/bbbc010-2012/: data_properties.json
pretrained_models/dsb-2018/: data_properties.json  normalization.json
pretrained_models/monuseg-2018/: data_properties.json
pretrained_models/usiigaci-2017/: data_properties.json  normalization.json
resources/: bibtex.txt
